langtools/test/tools/javac/typeAnnotations/failures/Scopes.out
Scopes.java:8:25: compiler.err.cant.resolve: kindname.class, UniqueInner, , 
1 error
